Corrected integer mistake with incoming form numbers... they're float. Also, added a column to show 'Investor Reco' as an example on how to add filters and scraping. BUT!, b/c we're scraping data from finviz.com, it's super slow on long lists.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-flask~=1.1.2
+flask>=1.1.2
 TA-lib
-pandas~=1.2.1
-yfinance~=0.1.55
-plotly~=4.14.3
+pandas>=1.2.1
+yfinance>=0.1.55
+plotly>=4.14.3
+
+requests>=2.25.1
+lxml>=4.6.2
