Launch of FyBot The code is there. Need to continue to dissect src.py

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 *tmp_*
 /excluded_resources/
 /venv/Lib/site-packages/~kg_resources/
+/venv/Lib/site-packages/~kg_resources/_vendor/
+/venv/Lib/site-packages/~kg_resources/extern/
