--- a/fybot/config/logging_config.ini
+++ b/fybot/config/logging_config.ini
@@ -30,6 +30,6 @@ args=('log.log', 'w')
 
 [formatter_formatter]
 ;https://docs.python.org/3/library/logging.html#logrecord-attributes
-format=%(asctime)s, %(levelname)-8s, %(name)-12s, %(module)s, %(funcName)s, %(lineno)s:  %(message)s
+format=%(asctime)s, %(levelname)-6s, %(name)-25s, %(module)-20s, %(funcName)-20s, %(lineno)-3s:  %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
 class=logging.Formatter
