Updates all around. Need to work on TDA connection. Too many requests per second error.

--- a/fybot/config/logging_config.ini
+++ b/fybot/config/logging_config.ini
@@ -1,10 +1,9 @@
-;https://docs.python.org/3/library/logging.config.html#logging.config.fileConfig
-
 [loggers]
 keys=root
 
 [handlers]
-keys=streamHandler,fileHandler
+keys=streamHandler
+;, fileHandler
 
 [formatters]
 keys=formatter
@@ -12,7 +11,8 @@ keys=formatter
 [logger_root]
 ;DEBUG, INFO, WARNING, ERROR, CRITICAL or NOTSET
 level=DEBUG
-handlers=streamHandler, fileHandler
+handlers=streamHandler
+;, fileHandler
 
 [handler_streamHandler]
 class=StreamHandler
@@ -21,11 +21,11 @@ formatter=formatter
 args=(sys.stderr,)
 ;args=(sys.stdout,)
 
-[handler_fileHandler]
-class=FileHandler
-level=DEBUG
-formatter=formatter
-args=('log.log', 'w')
+;[handler_fileHandler]
+;class=FileHandler
+;level=DEBUG
+;formatter=formatter
+;args=('log.log', 'w')
 ;('%(logfilename)s',)
 
 [formatter_formatter]
