Fixed watchlist error. Naked sniper should be running without errors.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,28 @@
-pandas
-yfinance
-plotly
-
-requests
-lxml
-
-psycopg2
-psaw
-
 aiohttp
-asyncpg
-
-pytz
-
+alpaca-trade-api
 asyncio
-
+asyncpg
 cryptography
-
-yahooquery
-
-streamlit
-
+httpx
+lxml
 matplotlib
 numpy
-
+pandas
+plotly
+psaw
+psycopg2
+python-dateutil
+pytz
+requests
+scipy
+selenium
+streamlit
 ta
-
-httpx
-
+tda-api
+yahooquery
+yahooquery
+yfinance
 
 ipython
-python-dateutil
-
-scipy
-
-selenium
+state
+setuptools
