--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ pytz
 requests
 scipy
 selenium
-
+sqlalchemy
 
 # User interface.
 streamlit
@@ -62,4 +62,3 @@ memory-profiler
 # Testing
 webdriver-manager
 streamlit-aggrid
-# sqlalchemy
