--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # PostgreSQL
-DB_USER="..."
-DB_PASSWORD="..."
-DB_NAME="..."
+DB_USER="postgres"
+DB_PASSWORD="diamondhands"
+DB_NAME="source"
 DB_HOST="db-server"
 DB_PORT="5432"
