--- a/requirements.txt
+++ b/requirements.txt
@@ -25,42 +25,46 @@
 # pipenv -r lock >> requirements.txt
 
 
-aiohttp
-asyncio
-asyncpg
-cryptography
-httpx
-lxml
-matplotlib
-numpy
-pandas
-psaw
-psycopg2
-pytz
-requests
-scipy
-selenium
-sqlalchemy
+aiohttp~=3.8.1
+asyncio~=3.4.3
+asyncpg~=0.25.0
+cryptography~=36.0.2
+httpx~=0.22.0
+lxml~=4.8.0
+matplotlib~=3.5.1
+numpy~=1.22.3
+pandas~=1.4.1
+psaw~=0.1.0
+psycopg2~=2.9.3
+pytz~=2021.3
+requests~=2.27.1
+scipy~=1.8.0
+selenium~=4.1.3
+sqlalchemy~=1.4.32
 
 
 # User interface.
-streamlit
+streamlit>=1.7.0
 
 # Data sources, API managers.
 alpaca-trade-api
-tda-api
-yahooquery
-yfinance
+tda-api~=1.5.2
+yahooquery~=2.2.15
+yfinance~=0.1.70
 
 # Finance tools.
-ta
-ta-lib  # https://pypi.org/project/TA-Lib/
+ta~=0.9.0
+# TA-lib, it's complicated
+# Visit this: https://pypi.org/project/TA-Lib/
+# Download compiled windows version here: https://www.lfd.uci.edu/~gohlke/pythonlibs/#ta-lib
+# python -m pip install .\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
+ta-lib
 
 # Testing tools, not useful in production.
-line-profiler
-memory-profiler
+line-profiler~=3.4.0
+memory-profiler~=0.60.0
 
 # Testing
 webdriver-manager
 streamlit-aggrid
-# sqlalchemy
+setuptools~=60.10.0
