updated database initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,23 @@
 
 version: "3"
 services:
-  app:
-    container_name: fybot
-    build: .
-    image: local/fybot:beta
-    hostname: fybot
-    restart: unless-stopped
-    ports:
-      - "8501:8501"
-    volumes:
-      - ./fybot:/usr/src/fybot
-    networks:
-      - fybot-net
-      - db-net
-    depends_on:
-      - db-server
-
   db-server:
     container_name: db-server
     image: postgres:13
     hostname: ${DB_HOST}
-    restart: unless-stopped
+    restart: always
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_USER=${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: ${DB_USER}
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
     ports:
-      - 54320:5432
+      - 5432:5432
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - ./db-data:/var/lib/postgresql/data
       - ./fybot/config/create_tables.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - db-net
@@ -51,6 +39,23 @@ services:
     networks:
       - fybot-net
       - db-net
+
+  app:
+    container_name: fybot
+    build: .
+    image: local/fybot:beta
+    hostname: fybot
+    restart: unless-stopped
+    ports:
+      - "8501:8501"
+    volumes:
+      - ./fybot:/usr/src/fybot
+    networks:
+      - fybot-net
+      - db-net
+    depends_on:
+      - db-server
+      - db-admin
 
 volumes:
   db-data:
