refactoring to work with env file and db within docker

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,14 @@
-# PostgreSQL
-DB_USER="..."
-DB_PASSWORD="..."
-DB_NAME="..."
-DB_HOST="db-server"
+NAME=<name>
+GMAIL=<email>
+
+DB_HOST=db.server
+POSTGRES_USER=postgres
+POSTGRES_DB=<database name, eg. source>
+POSTGRES_PASSWORD=<database password>
 DB_PORT="5432"
+
+TDA_ACCOUNT=b'<encrypted account here>'
+TDA_API_KEY=<enter apikey here>@AMER.OAUTHAP
+TDA_SECRET_KEY=<secretkey>
+TDA_REDIRECT_URI="https://localhost/<fybot>"
+TDA_TOKEN_PATH="/Users/ramirezae/.tda/td_access_token.pickle"
