--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ version: "3"
 services:
   app:
     container_name: fybot
-    build: .
+    build:
+      target: development
+      # target: production
     image: local/fybot:beta
     hostname: fybot
     restart: unless-stopped
@@ -32,7 +34,7 @@ services:
       - ${DB_PORT}:5432
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./fybot/config/create_tables.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./fybot/config/create_tables_docker.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - db-net
 
