--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ sqlalchemy~=1.4.32
 
 
 # User interface.
-streamlit>=1.7.0
+streamlit
 
 # Data sources, API managers.
 alpaca-trade-api
@@ -58,12 +58,3 @@ ta~=0.9.0
 # Download compiled windows version here: https://www.lfd.uci.edu/~gohlke/pythonlibs/#ta-lib
 # python -m pip install .\TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
 ta-lib
-
-# Testing tools, not useful in production.
-line-profiler~=3.4.0
-memory-profiler~=0.60.0
-
-# Testing
-webdriver-manager
-streamlit-aggrid
-setuptools~=60.10.0
